Fix Gradle plugin test failures on Java 9.0.1